# rag_tools

./: .gitignore  .pre-commit-config.yaml  README.md  increase_swap.sh  pyproject.toml
rag_tools/: test.py
rag_tools/langchain_works/: requirements.txt  run_langchain.py
rag_tools/langraph_works/: run_langraph.py  runas_streamlit.py
rag_tools/llamaindex_works/: run_llamaindex.py
rag_tools/ollama_works/: call_ollama.py
storage/: docstore.json  index_store.json
